Reset all files button width

--- a/homeassistant-version-control/public/lang/en.json
+++ b/homeassistant-version-control/public/lang/en.json
@@ -43,7 +43,8 @@
     "single_file_restored": "{file} restored!",
     "single_file_restored_reloaded": "{file} restored and reloaded successfully!",
     "multiple_files_restored": "{count} files restored!",
-    "multiple_files_restored_reloaded": "{count} files restored and reloaded successfully!"
+    "multiple_files_restored_reloaded": "{count} files restored and reloaded successfully!",
+    "reset_all_files": "RESET ALL FILES"
   },
   "file_status": {
     "added": "Added",
