Settings text update

--- a/homeassistant-version-control/public/lang/en.json
+++ b/homeassistant-version-control/public/lang/en.json
@@ -195,7 +195,7 @@
     "cloud_push_hourly": "Hourly",
     "cloud_push_daily": "Daily",
     "cloud_include_secrets": "Include secrets.yaml",
-    "cloud_include_secrets_desc": "Warning: This will upload your sensitive secrets to the cloud",
+    "cloud_include_secrets_desc": "This will upload your secrets.yaml to the cloud",
     "cloud_test_connection": "Test Connection",
     "cloud_push_now": "Push Now",
     "cloud_last_push": "Last push:",
